上传，下载，swaggerui支持界面及部分接口完善

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
+    "highlight.js": "^11.10.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1"
+    "@element-plus/nuxt": "^1.0.9",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "element-plus": "^2.7.7",
+    "nuxt-file-storage": "^0.2.7"
   }
 }
