--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
+    "crypto-js": "^4.2.0",
     "highlight.js": "^11.10.0",
     "nuxt": "^3.12.3",
+    "spark-md5": "^3.0.2",
     "vue": "latest"
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/crypto-js": "^4.2.2",
+    "@types/spark-md5": "^3.0.4",
     "element-plus": "^2.7.7",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "nuxt-file-storage": "^0.2.7"
   }
 }
